# stock-market-simulator

./: .gitignore  CMakeLists.txt  README.md  stock-market-simulator.pro
doc/doxygen/: doxygen.cfg
gui/: CMakeLists.txt
gui/include/: main_window.hpp
gui/layout/: main_window.ui
gui/src/: main_window.cpp
include/: date.hpp  dated.hpp  present_value.hpp
src/: date.cpp  main.cpp  present_value.cpp
